--- a/.gitignore
+++ b/.gitignore
@@ -87,9 +87,8 @@ npm-debug.log
 node_modules
 bower_components
 # name of the current frontend library directory
-web/static/lib/*
-#!*/
-#!/web/static/lib/angular/angular.min.js
+web/static/lib/
+!/web/static/lib/angular/angular.min.js
 #!/web/static/lib/angular-route/angular-route.min.js
 #!/web/static/lib/underscore/underscore-min.js
 #!/web/static/lib/d3/d3.min.js
